refactor: remove usage of deprecated Double creation